--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "koop": "^4.2.1",
-    "koop-provider-pg": "^1.0.5"
+    "koop-provider-pg": "^1.0.5",
+    "multer": "^1.4.3",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
