--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,6 @@
 FROM node:16-buster
 
-RUN apt-get update && apt-get install -y postgis
+RUN apt-get update && apt-get install -y postgis zip
 
 USER node
 
