--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.24.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "multer": "^1.4.3",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "prettier": "^2.5.1"
   }
 }
