--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch src src/app.js"
+    "dev": "nodemon --watch src src/app.js",
+    "start": "node src/app.js"
   },
   "author": "",
   "license": "MIT",
