--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "multer": "^1.4.3",
+    "node-ssh": "^12.0.3",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
