--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.24.0",
+    "dbffile": "^1.8.1",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "multer": "^1.4.3",
     "node-ssh": "^12.0.3",
+    "oracledb": "^5.4.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
