Update .env variables

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-PG_DATABASE=gis
-PG_USER=docker
-PG_PASSWORD=docker
+DB_SYSTEM=oracle
+DB_NAME=gis
+DB_USER=docker
+DB_PASSWORD=docker
 GS_USER=admin
 GS_PASS=geoserver
 GS_DATA_DIR='../geoserver_data'
