--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,9 +6,9 @@ services:
     ports:
       - "5433:5432"
     environment:
-      - POSTGRES_USER=${PG_USER}
-      - POSTGRES_PASS=${PG_PASSWORD}
-      - POSTGRES_DBNAME=${PG_DATABASE}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASS=${DB_PASSWORD}
+      - POSTGRES_DBNAME=${DB_NAME}
     networks:
       - server_net
 
@@ -38,9 +38,12 @@ services:
     environment:
       - PG_HOST=tool_db
       - PG_PORT=5432
-      - PG_DATABASE=${PG_DATABASE}
-      - PG_USER=${PG_USER}
-      - PG_PASSWORD=${PG_PASSWORD}
+      - ORACLE_HOST=tool_oracle_dev
+      - ORACLE_PORT=1521
+      - DB_SYSTEM=${DB_SYSTEM}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
       - GS_USER=${GS_USER}
       - GS_PASS=${GS_PASS}
       - MODEL_PASSWORD=${MODEL_PASSWORD}
@@ -66,23 +69,23 @@ services:
     networks:
       - server_net
 
-  oracle:
+  tool_oracle:
 
-    # Docker Hub image (feel free to change the tag "latest" to any other available one)
     image: gvenzl/oracle-xe:latest
 
-    # Provide passwords and other environment variables to container
     environment:
-      - ORACLE_PASSWORD=${PG_PASSWORD}
-      - APP_USER=${PG_USER}
-      - APP_USER_PASSWORD=${PG_PASSWORD}
-      - ORACLE_DATABASE=${PG_DATABASE}
+      - ORACLE_PASSWORD=${DB_PASSWORD}
+      - APP_USER=${DB_USER}
+      - APP_USER_PASSWORD=${DB_PASSWORD}
+      - ORACLE_DATABASE=${DB_NAME}
 
     container_name: tool_oracle_dev
 
-    # Forward Oracle port
     ports:
       - 1522:1521
+
+    networks:
+     - server_net
 
 networks:
   server_net:
