--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,9 +77,9 @@ services:
     image: gvenzl/oracle-xe:latest
 
     environment:
-      - ORACLE_PASSWORD=${PG_PASSWORD}
-      - APP_USER=${PG_USER}
-      - APP_USER_PASSWORD=${PG_PASSWORD}
+      - ORACLE_PASSWORD=${DB_PASSWORD}
+      - APP_USER=${DB_USER}
+      - APP_USER_PASSWORD=${DB_PASSWORD}
       - ORACLE_DATABASE=${DB_NAME}
 
     container_name: tool_oracle
