--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,19 +73,17 @@ services:
       - server_net
 
   tool_oracle:
-
     image: gvenzl/oracle-xe:latest
-
     environment:
       - ORACLE_PASSWORD=${DB_PASSWORD}
       - APP_USER=${DB_USER}
       - APP_USER_PASSWORD=${DB_PASSWORD}
       - ORACLE_DATABASE=${DB_NAME}
-
     container_name: tool_oracle
-
     ports:
       - 1521:1521
+    networks:
+     - server_net
 
 networks:
   server_net:
