--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,5 @@
 version: "3"
 services:
-  tool_db:
-    image: kartoza/postgis:13.0
-    container_name: tool_db
-    ports:
-      - "5432:5432"
-    restart: always
-    environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASS=${DB_PASSWORD}
-      - POSTGRES_DBNAME=${DB_NAME}
-    networks:
-      - server_net
-
   tool_simulator:
     build:
       context: https://github.com/PEM-Humboldt/herramienta-resiliencia-simulador.git#main
@@ -38,11 +25,7 @@ services:
       - ${MODEL_OUPUTS_DIR}:/home/node/app/model_outputs
     restart: always
     environment:
-      - PG_HOST=tool_db
-      - PG_PORT=5432
-      - ORACLE_HOST=tool_oracle
-      - ORACLE_PORT=1521
-      - DB_SYSTEM=${DB_SYSTEM}
+      - DB_HOST=tool_db
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
@@ -69,19 +52,6 @@ services:
     environment:
       - GEOSERVER_ADMIN_USER=${GS_USER}
       - GEOSERVER_ADMIN_PASSWORD=${GS_PASS}
-    networks:
-      - server_net
-
-  tool_oracle:
-    image: gvenzl/oracle-xe:latest
-    environment:
-      - ORACLE_PASSWORD=${DB_PASSWORD}
-      - APP_USER=${DB_USER}
-      - APP_USER_PASSWORD=${DB_PASSWORD}
-      - ORACLE_DATABASE=${DB_NAME}
-    container_name: tool_oracle
-    ports:
-      - 1521:1521
     networks:
       - server_net
 
